--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "json-server":"json-server --watch /db.json"
+    "json-server":"json-server --watch public/db.json"
   },
   "dependencies": {
     "daisyui": "^2.40.1",
